<resources>
    <string name="app_name">Maths Play for Kids</string>

    <string name="help_text">Touch the right button to win!</string>
    <string name="score">Score</string>
    <string name="selectgame">Choose Game </string>
    <string name="spinner_prompt">Choose Your Game</string>
    <string name="musicswitch">Music</string>
    <string name="difficultyswitch">Difficulty</string>
    <string-array
        name="operator_game_list">
        <item> &gt; (Greater Than)</item>
        <item> &lt; (Lesser Than)</item>
        <item> + (Addition)</item>
        <item> - (Subtraction)</item>
        <item> Random </item>
    </string-array>
    <string-array
        name="patterns_game_list">
        <item> Next </item>
        <item> Before </item>
        <item> Between</item>
        <item> Random </item>
    </string-array>
    <string-array
        name="orders_game_list">
        <item> Ascending </item>
        <item> Descending </item>
        <item> Highest </item>
        <item> Lowest </item>
        <item> Random </item>
    </string-array>
    <string name="feedback">Feed back</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_feedback">Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Operators</string>
    <string name="title_patterns_main">Patterns</string>
    <string name="title_orders_main">Ordering</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_summ">Enter your child \' s name</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summ">Switch Sound On or Off </string>
    <string name="pref_display">Always On Display</string>
    <string name="pref_display_summ">Keeps Display Always On </string>
    <string name="pref_gt_title">Greater Than</string>
    <string name="pref_gt_min_title">Minimum</string>
    <string name="pref_gt_min_summ">Minimum value for this game</string>
    <string name="pref_gt_max_title">Maximum</string>
    <string name="pref_gt_max_summ">Maximum value for this game</string>
    <string name="pref_lt_title">Lesser Than</string>
    <string name="pref_between_title">Between</string>
    <string name="pref_add_title">Addition</string>
    <string name="pref_sub_title">Subtraction</string>
    <string name="new_operators_game">Operators Game</string>
    <string name="new_patterns_game">Patterns Game</string>
    <string name="exit_game">Exit</string>
    <string name="new_order_games">Ordering Games</string>
    <string name="skip">Skip</string>
</resources>
